--- a/Road Capture/Road Capture/Base.lproj/Main.storyboard
+++ b/Road Capture/Road Capture/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="F0B-XP-Gvk">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1Qe-Ee-HpC">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,88 +10,141 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item 2-->
-        <scene sceneID="cnf-zJ-pJ7">
+        <!--Settings-->
+        <scene sceneID="TkS-FV-CZg">
             <objects>
-                <viewController id="tbL-uQ-2Lq" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="V8P-u7-4v8">
+                <tableViewController id="Ywv-hU-jfJ" customClass="SettingsTableViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="KbL-9P-Wow">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="TPy-I0-w7V"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item 2" id="2pg-vO-1Yb"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Fbx-gl-AFC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <sections>
+                            <tableViewSection id="Qlt-da-NvX">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="pGO-uO-afa">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="pGO-uO-afa" id="4MO-B9-Q8L">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="zkO-zu-JLg">
+                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="zkO-zu-JLg" id="zyn-Zy-pYV">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="7Re-4A-7Tm">
+                                        <rect key="frame" x="0.0" y="88" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7Re-4A-7Tm" id="0Fn-7a-SiZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="Ywv-hU-jfJ" id="Lkh-rI-5Q6"/>
+                            <outlet property="delegate" destination="Ywv-hU-jfJ" id="uc3-dJ-6gT"/>
+                        </connections>
+                    </tableView>
+                    <tabBarItem key="tabBarItem" title="Settings" id="DaH-sQ-RId"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xu4-ts-Df8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1231" y="481"/>
+            <point key="canvasLocation" x="-902" y="360"/>
         </scene>
-        <!--Item 1-->
-        <scene sceneID="1PK-Lg-0VU">
+        <!--Gallery-->
+        <scene sceneID="7Ke-hh-N8P">
             <objects>
-                <viewController id="u8R-ml-1dc" customClass="ImageCaptureViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="4z0-Cm-efP">
+                <viewController id="WOH-wg-Efl" customClass="GalleryViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eZV-Nl-Mft">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7bJ-G7-RLD">
-                                <rect key="frame" x="16" y="20" width="343" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name=".SFNSText" family=".SF NS Text" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9mP-C4-TYn">
-                                <rect key="frame" x="16" y="48" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name=".SFNSText" family=".SF NS Text" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JHW-XF-BCG">
-                                <rect key="frame" x="16" y="78" width="343" height="20"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name=".SFNSText" family=".SF NS Text" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" showsScale="YES" showsTraffic="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eRI-m9-IPv">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </mapView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="4bk-ha-LaU"/>
+                        <viewLayoutGuide key="safeArea" id="gGU-Rb-SOl"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Item 1" id="hKf-6v-rvI"/>
-                    <connections>
-                        <outlet property="distanceLabel" destination="7bJ-G7-RLD" id="VKg-kC-SKK"/>
-                        <outlet property="mapView" destination="eRI-m9-IPv" id="qZP-7q-kme"/>
-                        <outlet property="straightDistanceLabel" destination="JHW-XF-BCG" id="A8g-O6-uc3"/>
-                        <outlet property="totalDistanceLabel" destination="9mP-C4-TYn" id="lae-0K-X4u"/>
-                    </connections>
+                    <tabBarItem key="tabBarItem" title="Gallery" id="v7h-FM-MTG"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="C3K-yf-cRg" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GHQ-hF-oqD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1229.5999999999999" y="-236.13193403298354"/>
+            <point key="canvasLocation" x="-70" y="359"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="KUa-F2-Xqh">
+        <scene sceneID="NKt-nu-Xay">
             <objects>
-                <tabBarController id="F0B-XP-Gvk" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="oV6-JU-6tQ">
+                <tabBarController id="1Qe-Ee-HpC" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1hy-aR-lp6">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="u8R-ml-1dc" kind="relationship" relationship="viewControllers" id="BEb-TD-BEF"/>
-                        <segue destination="tbL-uQ-2Lq" kind="relationship" relationship="viewControllers" id="lvr-sd-AgD"/>
+                        <segue destination="hXu-8X-bZi" kind="relationship" relationship="viewControllers" id="J8V-4c-efC"/>
+                        <segue destination="WOH-wg-Efl" kind="relationship" relationship="viewControllers" id="cha-8O-nIJ"/>
+                        <segue destination="8Jr-GZ-jXz" kind="relationship" relationship="viewControllers" id="Iud-bD-e2o"/>
+                        <segue destination="Ywv-hU-jfJ" kind="relationship" relationship="viewControllers" id="GGs-up-Jpb"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="MdV-fw-0R1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Mg-5h-ALH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="242" y="106"/>
+            <point key="canvasLocation" x="-289" y="-411"/>
+        </scene>
+        <!--Camera View Controller-->
+        <scene sceneID="LVK-fU-HPb">
+            <objects>
+                <viewController id="Al3-9I-E9z" customClass="CameraViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2kP-oq-oms">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="k8c-TV-nCY"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Ft5-H9-Kng"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J10-9n-5gx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2002.4000000000001" y="-432.23388305847078"/>
+        </scene>
+        <!--Help-->
+        <scene sceneID="7uC-Jp-3OT">
+            <objects>
+                <viewController id="8Jr-GZ-jXz" customClass="HelpViewController" customModule="Road_Capture" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="FM0-3a-XNg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="zXL-Ji-OJj"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Help" id="J40-RT-2cd"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="P3x-8v-X3c" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="778" y="358"/>
+        </scene>
+        <!--Camera-->
+        <scene sceneID="0M7-bm-Q8d">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hXu-8X-bZi" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Camera" id="f77-uO-n9B"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Et2-Lg-wlZ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Al3-9I-E9z" kind="relationship" relationship="rootViewController" id="vnC-RH-E6C"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qNK-o1-5h9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1063.2" y="-432.23388305847078"/>
         </scene>
     </scenes>
 </document>
